# cnn_photoz

./: Makefile  README.md  pyproject.toml  setup.py
docs/: Makefile  conf.py  index.rst  make.bat
notebooks/: combine_HSC_with_COSMOS.ipynb  extract_galaxy_from_COSMOS2015.ipynb  make_coordlist_for_uploading.ipynb  show_z_distribution.ipynb
