[tool.poetry]
name = "cnn_photoz"
version = "0.1.0"
description = ""
authors = ["Kazuki Tsuda"]

[tool.poetry.dependencies]
python = "^3.7.2,<3.8"
astropy = "^4.2.1"
pandas = "^1.2.4"
matplotlib = "^3.4.2"
jupyterlab = "^3.0.16"
tensorflow = "^2.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
